--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+jwt.secret=personal.demo_register
 server.port = 8815
 spring.datasource.url = jdbc:mysql://localhost:3306/demo_spring_boot?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username = root
