user authentication and program crud

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.role.descriptor.sql.BasicBinder=INFO
 
 spring.jpa.show-sql = true
+spring.main.allow-circular-references=true
